# haskell-book

./: FunctionWithWhere.hs  arithBroken.hs  arithRead.hs  binaryTree.hs  catty.hs  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-17.md  chapter-18.md  chapter-19.md  cipher.hs  constantInstance.hs  dataCharExercises.hs  database.hs  derivingInstances.hs  determineType.hs  divideBy.hs  eitherMonad.hs  employee.hs  etf.hs  exercises-04.hs  exercises-06.hs  exercises-07.hs  exercises-10.hs  exercises-18.hs  factorial.hs  fibonacci.hs  identityInstance.hs  (+22 more)
addition/: Addition.hs  addition.cabal
hangman/: LICENSE  hangman.cabal
hangman/src/: Main.hs
morse/: package.yaml
morse/src/: Main.hs  Morse.hs
shawty/: package.yaml
shawty/app/: Main.hs
